<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@drawable/update_common_dialog_bg" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_24" android:layout_marginTop="@dimen/dp_30" android:layout_marginRight="@dimen/dp_24">
        <TextView android:textSize="@dimen/sp_22" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/str_video_to_anime" android:lines="1"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_16" android:layout_marginTop="@dimen/dp_15" android:layout_marginRight="@dimen/dp_16">
        <androidx.core.widget.NestedScrollView android:scrollbars="none" android:layout_width="match_parent" android:layout_height="wrap_content" android:fillViewport="true" android:overScrollMode="never">
            <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_16" android:textColor="@color/main_green" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_25" android:text="@string/str_requirement"/>
                <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_12" android:textColor="@color/translucent_white_20" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_6" android:text="@string/str_anime_v_tip1"/>
                <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_12" android:textColor="@color/translucent_white_20" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_3" android:text="@string/str_anime_v_tip2"/>
                <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_12" android:textColor="@color/translucent_white_20" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_3" android:text="@string/str_anime_v_tip3"/>
                <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_12" android:textColor="@color/translucent_white_20" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_3" android:text="@string/str_anime_v_tip4"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
        <androidx.appcompat.widget.AppCompatCheckBox android:theme="@style/MyEditText" android:textSize="@dimen/sp_14" android:textColor="@color/translucent_white_30" android:gravity="center" android:id="@+id/cb_anime_img_not_remind" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:text="@string/str_do_not_remind" android:layout_marginStart="@dimen/dp_10"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/ll_do" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_17" android:layout_marginTop="@dimen/dp_25" android:layout_marginRight="@dimen/dp_17" android:layout_marginBottom="@dimen/dp_25">
        <TextView android:textSize="@dimen/sp_20" android:textColor="@color/white" android:gravity="center" android:background="@drawable/btn_yes" android:layout_width="match_parent" android:layout_height="@dimen/dp_52" android:text="@string/str_ok" android:lines="1"/>
    </LinearLayout>
</LinearLayout>
