<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@drawable/update_common_dialog_bg" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_22" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_24" android:layout_marginTop="@dimen/dp_30" android:layout_marginRight="@dimen/dp_24" android:text="@string/str_use_credits_tip" android:lines="1"/>
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_18" android:textColor="@color/white" android:gravity="start" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" android:text="@string/str_notice" android:layout_marginStart="@dimen/dp_20"/>
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_14" android:textColor="@color/translucent_white_30" android:gravity="start" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" android:text="@string/str_upload_tip1" android:layout_marginStart="@dimen/dp_20"/>
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_14" android:textColor="@color/translucent_white_30" android:gravity="start" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" android:text="@string/str_upload_tip2" android:layout_marginStart="@dimen/dp_20"/>
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_14" android:textColor="@color/translucent_white_30" android:gravity="start" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" android:text="@string/str_control1_tip" android:layout_marginStart="@dimen/dp_20"/>
    <androidx.appcompat.widget.LinearLayoutCompat android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_10" android:layout_marginTop="@dimen/dp_25" android:layout_marginRight="@dimen/dp_10">
        <TextView android:textSize="@dimen/sp_18" android:textColor="@color/translucent_white_30" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_this_will_cost_you"/>
        <androidx.appcompat.widget.LinearLayoutCompat android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_3" android:layout_marginStart="@dimen/dp_6">
            <androidx.appcompat.widget.AppCompatImageView android:layout_width="@dimen/dp_18" android:layout_height="@dimen/dp_18" android:src="@drawable/ic_coin"/>
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_18" android:textColor="@color/translucent_white_30" android:gravity="center" android:id="@+id/tv_discount_coin_count" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="3" android:layout_marginStart="@dimen/dp_3"/>
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_18" android:textColor="@color/translucent_white_30" android:gravity="center" android:id="@+id/tv_coin_count" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="6" android:layout_marginStart="@dimen/dp_3"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatCheckBox android:theme="@style/MyEditText" android:textSize="@dimen/sp_12" android:textColor="@color/translucent_white_30" android:gravity="center" android:id="@+id/cb_not_remind" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_25" android:text="@string/str_do_not_remind" android:layout_marginStart="@dimen/dp_20"/>
    <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:id="@+id/ll_do" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_12" android:layout_marginBottom="@dimen/dp_25" android:layout_marginStart="@dimen/dp_18" android:layout_marginEnd="@dimen/dp_18">
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_20" android:textColor="@color/white" android:gravity="center" android:background="@drawable/btn_yes" android:layout_width="match_parent" android:layout_height="@dimen/dp_52" android:text="@string/str_create" android:lines="1"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
