<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/abc_text_select_handle_left_mtrl_dark" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true" android:layout_above="@+id/ll_btn" android:overScrollMode="never">
        <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <com.youth.banner.Banner android:id="@+id/banner" android:layout_width="match_parent" android:layout_height="@dimen/dp_350"/>
                <androidx.appcompat.widget.AppCompatImageView android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/white_bg" android:scaleType="centerCrop" app:tint="@color/abc_text_select_handle_left_mtrl_dark"/>
            </FrameLayout>
            <androidx.appcompat.widget.LinearLayoutCompat android:gravity="center" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/dp_20">
                <androidx.recyclerview.widget.RecyclerView android:id="@+id/vip_list" android:visibility="visible" android:layout_width="match_parent" android:layout_height="match_parent" android:overScrollMode="never" app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" app:spanCount="2"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
    <androidx.appcompat.widget.LinearLayoutCompat android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/ll_title" android:layout_width="match_parent" android:layout_height="@dimen/dp_60" android:layout_marginTop="@dimen/dp_30" android:paddingStart="@dimen/dp_16" android:paddingEnd="@dimen/dp_16">
        <androidx.appcompat.widget.AppCompatImageView android:id="@+id/pro_iv_close" android:background="@drawable/close_bg_black" android:padding="@dimen/dp_10" android:layout_width="@dimen/dp_40" android:layout_height="@dimen/dp_40" android:src="@drawable/ic_close"/>
        <androidx.legacy.widget.Space android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_13" android:textColor="@color/white" android:id="@+id/tv_restore" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_restore" android:textAllCaps="true"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:id="@+id/ll_btn" android:paddingTop="@dimen/dp_10" android:paddingBottom="@dimen/dp_30" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:paddingStart="@dimen/dp_16" android:paddingEnd="@dimen/dp_16">
        <androidx.appcompat.widget.LinearLayoutCompat android:gravity="center" android:orientation="vertical" android:id="@+id/btn_buy" android:background="@drawable/btn_selector" android:paddingTop="@dimen/dp_12" android:paddingBottom="@dimen/dp_12" android:layout_width="match_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_18" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/str_continue" android:textAllCaps="true"/>
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_10" android:textColor="@color/translucent_white_30" android:gravity="center" android:id="@+id/tv_tip" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_3" android:text="@string/str_get_credits_1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <TextView android:textSize="@dimen/sp_13" android:textColor="@color/main_green" android:layout_gravity="center" android:id="@+id/tv_free_get_coins" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:text="@string/str_free_coins" android:textAllCaps="true"/>
        <androidx.appcompat.widget.LinearLayoutCompat android:gravity="center_vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20">
            <TextView android:textSize="@dimen/sp_16" android:textStyle="bold" android:textColor="@color/teal_200" android:layout_gravity="center" android:id="@+id/go_to_pro" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_get_extra_credits"/>
            <androidx.legacy.widget.Space android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/sp_16" android:textStyle="bold" android:textColor="@color/white" android:layout_gravity="start" android:id="@+id/tv_why_paid" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_why_it_s_paid"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <TextView android:textSize="@dimen/sp_12" android:textColor="@color/white" android:layout_gravity="start" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/str_pay_desc"/>
        <androidx.appcompat.widget.LinearLayoutCompat android:gravity="center" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10">
            <TextView android:textSize="@dimen/sp_10" android:textColor="@color/main_green_50" android:layout_gravity="center" android:id="@+id/tv_term_of_use" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_term_of_use"/>
            <View android:background="@color/translucent_white_20" android:layout_width="@dimen/dp_1_5" android:layout_height="@dimen/dp_10" android:layout_marginStart="@dimen/dp_15" android:layout_marginEnd="@dimen/dp_15"/>
            <TextView android:textSize="@dimen/sp_10" android:textColor="@color/main_green_50" android:layout_gravity="center" android:id="@+id/tv_privacy_policy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_privacy_policy"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>
