<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@drawable/update_common_dialog_bg" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_22" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_24" android:layout_marginTop="@dimen/dp_30" android:layout_marginRight="@dimen/dp_24" android:text="@string/str_my_magic" android:lines="1"/>
    <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_10" android:layout_marginTop="@dimen/dp_15" android:layout_marginRight="@dimen/dp_10">
        <TextView android:textSize="@dimen/sp_14" android:textColor="@color/translucent_white_30" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/str_my_dream_tip"/>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16">
            <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <com.makeramen.roundedimageview.RoundedImageView android:layout_width="@dimen/dp_140" android:layout_height="@dimen/dp_200" android:src="@drawable/ic_dream_03" android:scaleType="centerCrop" android:adjustViewBounds="true" app:riv_corner_radius="@dimen/dp_12"/>
            </FrameLayout>
            <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="center" android:layout_width="@dimen/dp_30" android:layout_height="@dimen/dp_20"/>
            <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <com.makeramen.roundedimageview.RoundedImageView android:layout_width="@dimen/dp_140" android:layout_height="@dimen/dp_200" android:src="@drawable/ic_dream_05" android:scaleType="centerCrop" android:adjustViewBounds="true" app:riv_corner_radius="@dimen/dp_12"/>
            </FrameLayout>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_14" android:textColor="@color/translucent_white_30" android:gravity="center" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:text="@string/str_prompt_dialog_hint"/>
        <androidx.appcompat.widget.AppCompatCheckBox android:theme="@style/MyEditText" android:textSize="@dimen/sp_14" android:textColor="@color/translucent_white_30" android:gravity="center" android:id="@+id/cb_not_remind" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:text="@string/str_do_not_remind" android:layout_marginStart="@dimen/dp_10"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <LinearLayout android:orientation="vertical" android:id="@+id/ll_do" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_17" android:layout_marginTop="@dimen/dp_25" android:layout_marginRight="@dimen/dp_17" android:layout_marginBottom="@dimen/dp_25">
        <TextView android:textSize="@dimen/sp_20" android:textColor="@color/white" android:gravity="center" android:background="@drawable/btn_yes" android:layout_width="match_parent" android:layout_height="@dimen/dp_52" android:text="@string/str_ok" android:lines="1"/>
    </LinearLayout>
</LinearLayout>
