<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/abc_text_select_handle_left_mtrl_dark" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_12" android:textColor="@color/translucent_white_40" android:gravity="center" android:id="@+id/top_tip" android:background="@color/abc_text_select_handle_middle_mtrl_dark" android:paddingTop="@dimen/dp_10" android:paddingBottom="@dimen/dp_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/str_saved_downloaded_tip" android:paddingStart="@dimen/dp_16" android:paddingEnd="@dimen/dp_16"/>
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/download_list_view" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/top_tip" android:overScrollMode="never"/>
    <androidx.appcompat.widget.LinearLayoutCompat android:gravity="center" android:orientation="vertical" android:id="@+id/ll_permission" android:layout_width="match_parent" android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageView android:layout_width="@dimen/dp_120" android:layout_height="@dimen/dp_120" android:src="@drawable/ic_permission"/>
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_14" android:textColor="@color/white" android:gravity="center" android:padding="@dimen/dp_16" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" android:text="@string/str_permission_tip"/>
        <androidx.appcompat.widget.AppCompatButton android:textSize="@dimen/sp_14" android:textColor="@color/white" android:id="@+id/btn_authorize" android:background="@drawable/btn_yes" android:paddingTop="@dimen/dp_14" android:paddingBottom="@dimen/dp_14" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_30" android:text="@string/str_authorize" android:paddingStart="@dimen/dp_26" android:paddingEnd="@dimen/dp_26"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>
